--- a/requirements.txt
+++ b/requirements.txt
@@ -39,6 +39,7 @@ nest-asyncio==1.5.4
 notebook==6.4.6
 numpy==1.22.0
 packaging==21.3
+pandas==1.3.5
 pandocfilters==1.5.0
 parso==0.8.3
 pexpect==4.8.0
@@ -52,10 +53,12 @@ Pygments==2.11.1
 pyparsing==3.0.6
 pyrsistent==0.18.0
 python-dateutil==2.8.2
+pytz==2021.3
 pyzmq==22.3.0
 qtconsole==5.2.2
 QtPy==2.0.0
 requests==2.27.0
+scipy==1.7.3
 Send2Trash==1.8.0
 six==1.16.0
 terminado==0.12.1
