--- a/requirements.txt
+++ b/requirements.txt
@@ -12,6 +12,7 @@ debugpy==1.5.1
 decorator==5.1.0
 defusedxml==0.7.1
 entrypoints==0.3
+et-xmlfile==1.1.0
 fonttools==4.28.5
 idna==3.3
 ipykernel==6.6.1
@@ -20,6 +21,7 @@ ipython-genutils==0.2.0
 ipywidgets==7.6.5
 jedi==0.18.1
 Jinja2==3.0.3
+joblib==1.1.0
 jsonschema==4.3.3
 jupyter==1.0.0
 jupyter-client==7.1.0
@@ -38,6 +40,7 @@ nbformat==5.1.3
 nest-asyncio==1.5.4
 notebook==6.4.6
 numpy==1.22.0
+openpyxl==3.0.9
 packaging==21.3
 pandas==1.3.5
 pandocfilters==1.5.0
@@ -58,12 +61,15 @@ pyzmq==22.3.0
 qtconsole==5.2.2
 QtPy==2.0.0
 requests==2.27.0
+scikit-learn==1.0.2
 scipy==1.7.3
 seaborn==0.11.2
 Send2Trash==1.8.0
 six==1.16.0
+sklearn==0.0
 terminado==0.12.1
 testpath==0.5.0
+threadpoolctl==3.0.0
 tornado==6.1
 traitlets==5.1.1
 urllib3==1.26.7
